0.7.4
Added icons to plugin menus.
Set find/replace drop downs to last item on startup.
Fixed saving too many items from replace.
Fixed running tool in terminal as root.
Fixed running tool in terminal.
Fixed inserting top from tool into document if tool is run as root.
Running tools as root and/or synchronously now works properly.
Sorted out enabling/disabling switches on tools setup dialog.
Code clean.
Moved tempory folder to /run from /tmp.
Updated external tools.

0.7.3
Progress bar now doesn't show until there is data to show.
Done more documentation.
Fixed async tools.
Added force show completion to shortcuts in prefs.
Fixed completion bug.
Added changing progress bar from pulse to progress and back via control file.
Added using progress bar to external tools.
Fixed bookmarks moving when adding/deleting line(s).
Minor UI tweaks.
Added Go language syntax highlighter.
Fixed edge case where kkeditqt opened in one folder then trying to open a file with releative path from another folder.
Fixed opening duplicate files with relative path.
Tabbing at begining of line then pressing 'up/down' returns cursor to START/BEGINNING of previous/next line.
Started '"what's this' info for prefs dialog.
Set native 'print to pdf' default output folder to ~/Documents/.
Added option to set external application to handle printg ( QT5 doesn't play well with CUPS ).
Fixed crash when trying to print with no docs.
Fixed duplicate files being added to recents menu.
Fixed toggling tool output window.
Fixed running tools as root.

0.7.2
KKEditQTProgressBar cleanup.
Speeded up finding definitions from documentation.
Various ui tweaks.
Added save history file menu to SaveHistory plugin.
Smartened up plugin prefs dialog.
Added 'very safe' mode, no plugins, themes, syntax highlighters loaded, no exit data written.
Added 'safe' mode, all plugins disabled, no enable/disable data written.
Added menu style to prefs ( I prefer a scrollable menu ).
Cleaned up Prefs layout.