@@ -229,7 +229,11 @@
 
 
 
+
+
               in either the Gtk Doc viewer or your <font size="-1">default
+
+
 
 
 
@@ -257,6 +261,8 @@
                       selected will show up in the pop-up menu if you
                       have also <font size="-1">selected some text.<br>
                         Tools that have the "Always <font size="-1">show
+
+
 
 
 
@@ -306,9 +312,13 @@
 
 
 
+
+
                         -f'' WILL <font size="-1">work and show the
                           tail of the file but <font size="-1">WILL NOT
                             follow properly this is a <font size="-1">feature/problem
+
+
 
 
 
@@ -335,6 +345,8 @@
         size="-1"><br>
         Tools can be edited by selecting from the drop down list, if you
         attempt to edit a globally installed tool ( <font size="-1">i.e.</font>i.e.
+
+
 
 
 
@@ -435,6 +447,8 @@ p, li { white-space: pre-wrap; }
 
 
 
+
+
             here</a> ), the 'Terminal command' will be used to open a
           terminal, if this is blank then the default 'xterm -e' will be
           used.<br>
@@ -497,11 +511,13 @@ p, li { white-space: pre-wrap; }
       </b> <b><a href="#instanceanc">Single or multiple instance app.</a></b>
       <b><br>
       </b> <b><a href="#hexdumpanc">Open as hexdump.</a></b> <b><br>
-      </b> <b><a href="#findapi">Find API definition in Gtk Doc's.</a></b>
-      <b><br>
+      </b> <b><a href="#findapi">Find API definition in Qt5 and Gtk
+          Doc's.</a></b> <b><br>
       </b> <b><a href="#otherfeatsanc">Other</a></b><br>
       <br>
       <a name="copyfilenameanc" id="copyfilenameanc"></a><font size="-1">Right
+
+
 
 
 
@@ -621,11 +637,14 @@ p, li { white-space: pre-wrap; }
           term in the box and clicking 'Down' to search forward and 'Up'
           to search back.</span><br>
         <br>
-      </font><font size="-1">You can also search the QT5 class docs like
-        so </font><br>
+      </font><font size="-1">You can also search the QT5 docs for either
+        a class definition or a function definition like so:</font><br>
       <img moz-do-not-send="true"
         src="file:///home/keithhedger/Projects/KKEditQT/docs/selectqt5api.gif"
         alt="" height="126" width="484"><br>
+      <br>
+      <img moz-do-not-send="true" src="qt5funcsel.gif" alt=""
+        height="86" width="626"><br>
       <br>
       <img moz-do-not-send="true" src="selectapiqt5api.gif" alt=""
         height="475" width="632"><br>
@@ -670,6 +689,8 @@ p, li { white-space: pre-wrap; }
 
 
 
+
+
         Root</b><font size="-1"><font size="-1"><font size="-1"><br>
             You can also open a <font size="-1">new instance of
               KKEditQT with admin <font size="-1">privileges</font>
@@ -680,6 +701,8 @@ p, li { white-space: pre-wrap; }
                 size="-1"><font size="-1"><font size="-1"><font
                       size="-1">( <a
                         href="https://github.com/KeithDHedger/GtkSu">Available
+
+
 
 
 
@@ -786,7 +809,11 @@ p, li { white-space: pre-wrap; }
 
 
 
+
+
                                                         <font size="-1">A</font>ll'
+
+
 
 
 
@@ -809,6 +836,8 @@ p, li { white-space: pre-wrap; }
                                                         confirm the
                                                         action.<br>
                                                         <font size="-1">The
+
+
 
 
                                                           'Wrap<font
@@ -891,11 +920,11 @@ p, li { white-space: pre-wrap; }
         width="800"><br>
       <font size="-1">You can create documentation for your code if you
         have doxygen installed by selecting "Build Documentation" from
-        the 'File' menu, the documentation will be created in the
-        folder of the current document and displayed with either the
-        built in docviewer or the system browser, the first time you run
-        this there may be a small delay while the initial files are
-        created by doxygen, after that selecting </font><font size="-1"><font
+        the 'File' menu, the documentation will be created in the folder
+        of the current document and displayed with either the built in
+        docviewer or the system browser, the first time you run this
+        there may be a small delay while the initial files are created
+        by doxygen, after that selecting </font><font size="-1"><font
           size="-1">"Build</font> Documentation" again just updates the
         files, if there is not a file a called 'Doxyfile' in the current
         folder a default config file is created for you, this file can
@@ -975,6 +1004,8 @@ p, li { white-space: pre-wrap; }
 
 
 
+
+
         it here!</b><b><br>
       </b> <b><a href="https://github.com/KeithDHedger/KKEditQT"
           moz-do-not-send="true">KKEditQT</a></b><br>
@@ -1003,6 +1034,8 @@ p, li { white-space: pre-wrap; }
                             size="-1"><font size="-1">(</font></font></font></font></font><font
                       size="-1"><font size="-1"><font size="-1"><font
                             size="-1"><font size="-1"><font size="-1">optional
+
+
 
 
 
@@ -1097,11 +1130,15 @@ p, li { white-space: pre-wrap; }
 
 
 
+
+
         Bugs</b><font size="-1"><font size="-1"><br>
           <br>
           Please send bug reports, feature suggestions, large bags of
           jewels etc to:</font></font><br>
       <b><a href="mailto:keithdhedger@gmail.com" moz-do-not-send="true">Mail
+
+
 
 
 
